securitygroups.yml
AWSTemplateFormatVersion: 2010-09-09

Description:
  This template deploys 3 securitygroups each one for
  instances,loadbalancer,database

Parameters:
  VPCID:
    Description: An environment name that is prefixed to resource names
    Type: String

Resources:
  ALBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP inbound traffic
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0

  INSTANCESG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow inbound traffic from ALB
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref ALBSG
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0

  
  DATABASESG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow inbound traffic from instances
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref INSTANCESG
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 32768
          ToPort: 65535
          CidrIp: 0.0.0.0/0

Outputs:
  SecurityGroupID1:
    Value: !GetAtt INSTANCESG.GroupId
    Export:
      Name: webserver-sg
  ALBSecuritygroup:
    Value: !Ref ALBSG
    Export:
      Name: LoadbalanceSecuritygroup
  DBSecuritygroup:
    Value: !Ref DATABASESG
    Export:
      Name: DatabaseSecuritygroup
